=========================== 2.24.0 ===========================

2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>

	* NEWS: Updated 
	* configure.in: Release 2.24.0.

2008-08-21  Saleem Abdulrasool  <compnerd@compnerd.org>

	reviewed by: kmaraas

	* configure.in:  Check for polkit-policy-file-validate if
	policykit is neede to allow configure to pass on systems 
	without PolicyKit

=========================== 2.23.2 ==========================

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* defaults/Makefile.am: Add distclean rule.
	* gconf/gconfd.c: (get_on_system_bus):
	* gconf/gconfd.h: Fix some warnings.

2008-08-19  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Check for polkit-policy-file-validate
	to fix make distcheck.

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	* NEWS: Add noteworthy new features

2008-07-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 531169 – A mechanism for setting defaults

	The cache-clearing part of this patch is thanks
	to Behdad Esfahbod.

	* defaults/*: A DBus system bus service that can copy a 
	subtree of GConf values from the callers db to a system-wide
	db, using PolicyKit to control access.

	* configure.in: Add --enable-defaults-service to optionally
	build the defaults service.

	* gconf/gconf-database.[hc]: Add
	gconf_database_clear_cache_for_sources.

	* gconf/gconf-sources.[hc]: Add gconf_sources_clear_cache_for_sources.

	* gconf/gconfd.c: Listen for changes in the system-wide
	databases by the defaults service, and clear the cache.

	* po/POTFILES.in: Glue
	* Makefile.am: Glue

2008-07-04  Kjartan Maraas  <kmaraas@gnome.org>

	* gconf/gconfd.c: (main): Use g_chdir() instead of plain
	chdir()

2008-06-28  Kjartan Maraas  <kmaraas@gnome.org>

	* backends/evoldap-backend.c:
	* backends/gconf-merge-tree.c:
	* backends/markup-backend.c:
	* backends/markup-tree.c:
	* backends/markup-tree.h:
	* backends/xml-backend.c:
	* backends/xml-cache.c:
	* backends/xml-cache.h:
	* backends/xml-dir.c: