@@ -68,11 +68,10 @@ DllMain (HINSTANCE hinstDLL,
 static void
 setup (void)
 {
-  char *full_prefix;
+  char *full_prefix = NULL;
   char *cp_prefix; 
 
   wchar_t wcbfr[1000];
-  char cpbfr[1000];
   
   G_LOCK (mutex);
   if (locale_dir != NULL)
@@ -81,26 +80,13 @@ setup (void)
       return;
     }
 
-  if (G_WIN32_HAVE_WIDECHAR_API ())
+  if (GetModuleFileNameW (hmodule, wcbfr, G_N_ELEMENTS (wcbfr)))
     {
-      /* NT-based Windows has wide char API */
-      if (GetModuleFileNameW (hmodule, wcbfr, G_N_ELEMENTS (wcbfr)))
-	{
-	  full_prefix = g_utf16_to_utf8 (wcbfr, -1, NULL, NULL, NULL);
-	  if (GetShortPathNameW (wcbfr, wcbfr, G_N_ELEMENTS (wcbfr)))
-	    cp_prefix = g_utf16_to_utf8 (wcbfr, -1, NULL, NULL, NULL);
-	  else if (full_prefix)
-	    cp_prefix = g_locale_from_utf8 (full_prefix, -1, NULL, NULL, NULL);
-	}
-    }
-  else
-    {
-      /* Win9x */
-      if (GetModuleFileNameA (hmodule, cpbfr, G_N_ELEMENTS (cpbfr)))
-	{
-	  full_prefix = g_locale_to_utf8 (cpbfr, -1, NULL, NULL, NULL);
-	  cp_prefix = g_strdup (cpbfr);
-	}
+      full_prefix = g_utf16_to_utf8 (wcbfr, -1, NULL, NULL, NULL);
+      if (GetShortPathNameW (wcbfr, wcbfr, G_N_ELEMENTS (wcbfr)))
+	cp_prefix = g_utf16_to_utf8 (wcbfr, -1, NULL, NULL, NULL);
+      else if (full_prefix)
+	cp_prefix = g_locale_from_utf8 (full_prefix, -1, NULL, NULL, NULL);
     }
 
   if (full_prefix != NULL)
