@@ -1,3 +1,8 @@
+2008-09-25  Tor Lillqvist  <tml@novell.com>
+
+	* gconf/dllmain.c (setup): Drop the Win9x code path. There is no
+	Win9x support any more lower in the stack anyway.
+
 =========================== 2.24.0 ===========================
 
 2008-09-22  Kjartan Maraas  <kmaraas@gnome.org>
